--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
           <input type="text" id="inputSearch" placeholder="search here..." />
           <input type="submit" hidden />
         </form>
+        <select id="sort">
+          <option value="all" disabled hidden>All</option>
+          <option value="h-l">Sort high to low</option>
+          <option value="l-h">Sort low to high</option>
+        </select>
       </div>
     </header>
     <section id="root"></section>
