--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
           </button>
         </form>
         <select id="sort">
-          <option value="all" disabled hidden>All</option>
-          <option value="h-l">Sort high to low</option>
-          <option value="l-h">Sort low to high</option>
+          <option value="all" hidden>Sort Products</option>
+          <option value="h-l">High To Low</option>
+          <option value="l-h">Low To High</option>
         </select>
       </div>
     </header>
