add total amount

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   </head>
   <body>
     <div class="overlay2">
-      <div class="modal2" id="shopping-cart-modal">
+      <div class="modal2">
         <button class="modal-class-btn">x</button>
+        <div id="shopping-cart"></div>
+        <div id="modal-footer"></div>
       </div>
     </div>
     <header>
