adding checkout button

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
       <div class="modal2">
         <button class="modal-class-btn">x</button>
         <div id="shopping-cart"></div>
-        <div id="modal-footer"></div>
+        <div id="modal-footer">
+          <p>Total: 0$</p>
+        </div>
       </div>
     </div>
     <header>
